--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,24 @@
 /*  your css code here. If applicable */
+body{
+	background:#f8f8f8;
+}
+.book{
+	background:#ffffff;
+	margin:20px;
+}
+button{
+	background:#2ecc71;
+	width:100%;
+	color:white;
+	padding:9px
+}
+p{
+	background:#777777;
+	width:250px
+}
+.image{
+	padding-top:50px
+}
+h1{
+	text-align:center;
+}
