--- a/styles.css
+++ b/styles.css
@@ -6,17 +6,19 @@ body{
 	background:#ffffff;
 	margin:20px;
 }
-button{
+.button{
 	background:#2ecc71;
+	text-align:center;
 	width:100%;
 	color:white;
 	padding:9px
+	
 }
 p{
 	background:#777777;
 	width:250px
 }
-.image{
+.div{
 	padding-top:50px
 }
 h1{
